[gd_scene load_steps=10 format=3 uid="uid://7n5hv8bu6tv6"]

[ext_resource type="Script" uid="uid://23vspudwiy46" path="res://player_movement.gd" id="1_3imes"]
[ext_resource type="Texture2D" uid="uid://b6ct0ykr0joe2" path="res://textures/random/trail16.png" id="2_eocyw"]
[ext_resource type="Texture2D" uid="uid://bauelcl7afrak" path="res://textures/random/square_attack.png" id="3_j54h2"]
[ext_resource type="Texture2D" uid="uid://c6og6ukbls6h4" path="res://textures/random/circle_attack.png" id="4_p6jpj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8reia"]
radius = 6.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_pk137"]
blend_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_h5dpr"]
radius = 48.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_at4tq"]
size = Vector2(85, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4o4u0"]
size = Vector2(85, 50)

[node name="CharacterBody2D" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_3imes")

[node name="body" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8reia")

[node name="debugsprite" type="Sprite2D" parent="."]
modulate = Color(0.121, 0.372, 0.633, 0.663)
material = SubResource("CanvasItemMaterial_pk137")
scale = Vector2(4, 4)
texture = ExtResource("2_eocyw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_eocyw")

[node name="overhead_attack" type="Area2D" parent="." groups=["attack"]]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="overhead_attack"]
visible = false
position = Vector2(0, -25)
shape = SubResource("CircleShape2D_h5dpr")
debug_color = Color(0, 0.635294, 0.207843, 0.521569)

[node name="left_slide_attack" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_slide_attack"]
visible = false
position = Vector2(43, -2)
shape = SubResource("RectangleShape2D_at4tq")
debug_color = Color(0.956871, 0.119971, 0.43239, 0.42)

[node name="right_slide_attack" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_slide_attack"]
visible = false
position = Vector2(-43, -2)
shape = SubResource("RectangleShape2D_4o4u0")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 12
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 16.0
direction = Vector2(0, -1)
initial_velocity_min = 161.62
initial_velocity_max = 250.0
scale_amount_min = 12.0
scale_amount_max = 16.0
color = Color(0.752085, 0.112797, 0.27438, 1)
hue_variation_min = -0.65
hue_variation_max = 0.67

[node name="right" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(0.376471, 1, 1, 0.345098)
position = Vector2(-43, -2)
scale = Vector2(1.43333, 1.04167)
texture = ExtResource("3_j54h2")

[node name="left" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(0.376471, 1, 1, 0.345098)
position = Vector2(43, -2)
scale = Vector2(1.43333, 1.04167)
texture = ExtResource("3_j54h2")

[node name="top_sprite" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.87451, 0.380392, 0.913725, 0.478431)
position = Vector2(-2.35438e-06, -24.5)
scale = Vector2(1.56667, 1.97917)
texture = ExtResource("4_p6jpj")

[node name="bullet_reflector" type="Area2D" parent="." groups=["reflector"]]
monitoring = false
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="bullet_reflector"]
visible = false
polygon = PackedVector2Array(-40, 0, -48, -24, -42, -48, -12, -72, 12, -72, 42, -48, 48, -24, 40, 0, 38, -41, 0, -66, -38, -41)

[connection signal="body_entered" from="overhead_attack" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="left_slide_attack" to="." method="_on_lest_slide_attack_body_entered"]
[connection signal="body_entered" from="right_slide_attack" to="." method="_on_right_slide_attack_body_entered"]
[connection signal="finished" from="CPUParticles2D" to="." method="_on_cpu_particles_2d_finished"]
